--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -7,11 +7,29 @@ trigger:
 - master
 
 pool:
-  vmImage: "windows-latest"
+  vmImage: 'windows-latest'
 
 variables:
+  solution: '**/*.sln'
+  buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: NuGetToolInstaller@1
+
+- task: NuGetCommand@2
+  inputs:
+    restoreSolution: '$(solution)'
+
+- task: VSBuild@1
+  inputs:
+    solution: '$(solution)'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
+
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: 'D:\a\1\s\DotNetConf\bin\Release\net472\win-x86\'
+    artifact: 'Calculator'
